# murack-web

./: CLAUDE.md  LICENSE  README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 001_create_songs.sql
backend/src/: api_define.rs  artwork.rs  database.rs  db_utils.rs  error_handling.rs  group_list.rs  main.rs  playlist.rs  test_tag_group.rs  track_list.rs
backend/src/group_list/: group_column.rs  group_query.rs  handlers.rs  handlers_test.rs
backend/src/group_list/fixtures/: test_group_list_duplicate.sql  test_group_list_empty.sql  test_group_list_normal.sql  test_group_list_order_alternate.sql  test_group_list_with_empty.sql
backend/src/group_list/handlers/: tests.rs
backend/src/group_list/handlers/fixtures/: normal.sql  order_alternate.sql  track_list.sql
backend/src/handlers/: mod.rs  songs.rs  tag_groups.rs
backend/src/models/: mod.rs  song.rs  tag_group.rs
backend/src/playlist/: get_handlers.rs  update_handlers.rs
backend/src/test_tag_group/: handlers.rs
frontend/: .gitignore  deno.json  deno.jsonc  eslint.config.mjs  index.html  orval.config.cjs  orval.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api_base_url.ts  backend_types.ts  custom_fetch.ts  main.tsx  preferences.ts  theme.ts
frontend/src/common_components/: ErrorBoundary.tsx  ListArtwork.tsx  LoadingErrorAlert.tsx  LoadingView.tsx  screen_lock.tsx
frontend/src/components/: SongForm.tsx  SongList.tsx  TagGroupForm.tsx  TagGroupList.tsx
frontend/src/group_list/: AlbumListPage.tsx  ArtistListPage.tsx  GenreListPage.tsx  (+5 more)
(+19 files in other folders)
